Bug 82146 - backlight xrandr property missing
Summary: backlight xrandr property missing
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-04 17:53 UTC by Edward Sheldrake
Modified: 2014-08-04 19:22 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
fix the backlight regression (853 bytes, patch)
2014-08-04 17:55 UTC, Edward Sheldrake
no flags Details | Splinter Review

Description Edward Sheldrake 2014-08-04 17:53:06 UTC
The ability to set the backlight via the xrandr property seems to have disappeared recently, the backlight property is no longer listed in the xrandr output.

But the backlight xrandr property is present if the brightness level is zero on starting X, so one line patch to follow.
Comment 1 Edward Sheldrake 2014-08-04 17:55:11 UTC
Created attachment 104012 [details] [review]
fix the backlight regression
Comment 2 Chris Wilson 2014-08-04 19:22:23 UTC
commit ebd1907304c538bcc27614bc8e2e29f317ffb390
Author: Edward Sheldrake <ejsheldrake@gmail.com>
Date:   Mon Aug 4 18:53:38 2014 +0100

    backlight: Fix regression
    
    The backlight xrandr property is missing unless the backlight level
    was 0 on starting X, regression introduced in
    
    commit f9e7ac7db7b0331131aa1df3a90d4b2692949efa
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Wed Jul 23 21:53:31 2014 +0100
    
        backlight: Set structure to safe values when not initialised
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=82146


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.