backlight: Fix regression

The backlight xrandr property is missing unless the backlight level
was 0 on starting X, regression introduced in

commit f9e7ac7db7b0331131aa1df3a90d4b2692949efa
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Jul 23 21:53:31 2014 +0100

    backlight: Set structure to safe values when not initialised

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=82146